--- a/04_tutorial_ex2/04_tutorial_ex2.vcxproj.filters
+++ b/04_tutorial_ex2/04_tutorial_ex2.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="GameManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Checkpoint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Map.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Checkpoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
