--- a/GamePatternFinalProject/GamePatternFinalProject.vcxproj.filters
+++ b/GamePatternFinalProject/GamePatternFinalProject.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="GameManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InputFile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Item.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InputFile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
